# meeting-scribe

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TEST_PLAN.md  transcribe.py
.github/workflows/: claude-code-review.yml
docs/plans/: 2026-03-09-assistant-integration-design.md
obsidian-plugin/: manifest.json  package.json  styles.css
obsidian-plugin/src/: main.ts  markdown-writer.ts  settings.ts  speaker-store.ts  transcript-view.ts  types.ts  vault-manager.ts  ws-client.ts
server/: config.example.toml  pyproject.toml
server/skills/: action-tracker.md  summarizer.md
server/src/: assistant.py  audio_capture.py  diarizer.py  main.py  models.py  ollama_client.py  pipeline.py  skills.py  transcriber.py  ws_server.py
server/tests/: test_assistant.py  test_audio_capture.py  test_client.py  test_diarizer.py  test_ollama_client.py  test_pipeline.py  test_skills.py  test_speaker_assign.py  test_topic_detection.py  test_transcriber.py  test_ws_server.py
